task_2/app/user-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-client
spec:
  selector:
    app: user-client
  type: ClusterIP
  ports:
    - name: tcp-user-client
      port: 80
      targetPort: tcp-user-client
