task_2/app/user-client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-client-ingress
spec:
  defaultBackend:
    service:
      name: user-client
      port:
        number: 80
